refactor: reorganize project structure
- split cards app into cards, decks, and repetitions
- move common toggle_form_state.js to root static/
- move review.js to repetitions static/
- rename CardSet to Deck
- rename CardSetProgress to DeckProgress
- update model fields and relationships
- rename model-related files, templates, urls, functions, variables, paths, etc
- remove nested template directories

--- a/devshub_project/cards/templates/cards/card_detail.html
+++ b/devshub_project/cards/templates/cards/card_detail.html
@@ -32,5 +32,5 @@
 {% endblock content %}
 
 {% block scripts %}
-  <script src="{% static "cards/js/form_toggles.js" %}"></script>
+  <script src="{% static "js/toggle_form_state.js" %}"></script>
 {% endblock scripts %}
