--- a/devshub_project/repetitions/templates/repetitions/review.html
+++ b/devshub_project/repetitions/templates/repetitions/review.html
@@ -33,5 +33,5 @@
 {% endblock content %}
 
 {% block scripts %}
-  <script src="{% static "cards/js/review.js" %}"></script>
+  <script src="{% static "repetitions/js/review.js" %}"></script>
 {% endblock scripts %}
