--- a/devshub_project/templates/base.html
+++ b/devshub_project/templates/base.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{% block title %}{% endblock title %}</title>
+  <link rel="stylesheet" href="{% static "css/main.css" %}">
 </head>
 <body>
   {% include "partials/header.html" %}
@@ -16,9 +17,9 @@
 
   {% include "partials/footer.html" %}
 
-  
+
   <script src="{% static "js/js.cookie.min.js" %}"></script>
-  
+
   {% block scripts %}
   {% endblock scripts %}
 </body>
