--- a/devshub_project/templates/base.html
+++ b/devshub_project/templates/base.html
@@ -8,14 +8,14 @@
   <link rel="stylesheet" href="{% static "css/main.css" %}">
 </head>
 <body>
-  {% include "partials/header.html" %}
+  {% include "header.html" %}
 
   <main>
     {% block content %}
     {% endblock content %}
   </main>
 
-  {% include "partials/footer.html" %}
+  {% include "footer.html" %}
 
 
   <script src="{% static "js/js.cookie.min.js" %}"></script>
