--- a/devshub_project/templates/base.html
+++ b/devshub_project/templates/base.html
@@ -7,10 +7,10 @@
   <title>{% block title %}{% endblock title %}</title>
   <link rel="stylesheet" href="{% static "css/main.css" %}">
 </head>
-<body>
+<body class="flex flex-col min-h-screen">
   {% include "header.html" %}
 
-  <main>
+  <main class="flex-1">
     {% block content %}
     {% endblock content %}
   </main>
