--- a/devshub_project/templates/footer.html
+++ b/devshub_project/templates/footer.html
@@ -1,1 +1,9 @@
-<footer></footer>
+<footer class="py-4 bg-gray-100">
+  <div class="container mx-auto px-4 text-center text-lg font-medium">
+    <span>© {% now "Y" %}
+      <a href="https://github.com/romanovsqd" target="_blank" class="text-blue-500 hover:text-blue-600 transition-colors">
+        romanovsqd</a>.
+      All rights reserved.
+    </span>
+  </div>
+</footer>
