--- a/devshub_project/decks/templates/decks/deck_detail.html
+++ b/devshub_project/decks/templates/decks/deck_detail.html
@@ -13,7 +13,7 @@
     <ul>
       {% for card in cards %}
         <li>
-          {% render_card card %}
+          {% render_card card=card user=request.user %}
         </li>
       {% empty %}
         <li>
