--- a/devshub_project/users/templates/users/user_decks.html
+++ b/devshub_project/users/templates/users/user_decks.html
@@ -1,89 +1,36 @@
 {% extends "base.html" %}
 {% load static %}
-{% load deck_tags %}
-
 
 {% block title %}
   {% if is_owner %}Мои наборы карточек{% else %}Наборы карточек {{ user.username }}{% endif %}
 {% endblock title %}
 
 {% block content %}
-
   <div class="py-8">
     <div class="container mx-auto px-4">
 
       <div class="mb-8">
-        <h1 class="text-2xl font-semibold text-center">Колоды</h1>
-      </div>
-      <div class="max-w-1/2 mx-auto mb-8">
-        <form method="get" class="flex gap-4 font-medium">
-          <input
-            type="text"
-            name="query"
-            placeholder="Циклы в Python"
-            value="{{ request.GET.query|default:'' }}"
-            class="border-gray-300 rounded-md flex-6 shadow"
-          />
-          <select name="sort_by" class="border-gray-300 rounded-md flex-2 shadow">
-            <option value="newest" {% if request.GET.sort_by == "newest" %}selected{% endif %}>Сначала новые</option>
-            <option value="oldest" {% if request.GET.sort_by == "oldest" %}selected{% endif %}>Сначала старые</option>
-          </select>
-          <button type="submit" class="py-2 px-4 border border-gray-300 rounded-md bg-blue-500 hover:bg-blue-600 transition-colors text-white text-shadow-md cursor-pointer flex-1 shadow">Найти</button>
-        </form>
-      </div>
-      <div class="mb-4">
-        <div class="flex gap-4 py-2 px-2 text-gray-500">
-          <p class="flex-2">Тема колоды</p>
-          <p class="flex-1">Автор</p>
-          <p class="flex-1 text-right">Статус</p>
-        </div>
-        <ul class="divide-y divide-gray-300">
-          {% for deck in user_decks %}
-            <li>
-              {% render_deck deck=deck user=request.user is_owner=is_owner studying_decks_ids=studying_decks_ids %}
-            </li>
-          {% endfor %}
-        </ul>
-      </div>
-      <div class="flex gap-4 justify-center items-center font-medium">
-        {% if user_decks.paginator.num_pages > 1 %}
-
-          {% if user_decks.has_previous %}
-            <a href="?page={{ user_decks.previous_page_number }}&query={{ query }}&sort_by={{ sort_by }}">
-              Назад
-            </a>
-          {% endif %}
-
-          {% for page_num in user_decks.paginator.page_range %}
-            {% if page_num >= user_decks.number|add:-2 and page_num <= user_decks.number|add:2 %}
-
-              {% if page_num == user_decks.number %}
-                <span class="font-semibold text-blue-600">
-                  {{ page_num }}
-                </span>
-              {% else %}
-                <a
-                  href="?page={{ page_num }}&query={{ query }}&sort_by={{ sort_by }}"
-                  class="hover:text-blue-600"
-                >
-                  {{ page_num }}
-                </a>
-              {% endif %}
-
-            {% endif %}
-          {% endfor %}
-
-          {% if user_decks.has_next %}
-            <a href="?page={{ user_decks.next_page_number }}&query={{ query }}&sort_by={{ sort_by }}">
-              Вперёд
-            </a>
-          {% endif %}
-
+        {% if is_owner %}
+            {% include "includes/title.html" with title="Мои колоды" %}
+        {% else %}
+            {% include "includes/title.html" with title="Колоды "|add:user.username %}
         {% endif %}
       </div>
+
+      <div class="max-w-1/2 mx-auto mb-8">
+        {% include "includes/search_form.html" with placeholder="Циклы в Python" %}
+      </div>
+
+      <div class="mb-4">
+        {% include "includes/deck_list.html" with decks=user_decks user=request.user is_owner=is_owner studying_decks_ids=studying_decks_ids %}
+      </div>
+
+      <div>
+        {% include "includes/pagination.html" with page_obj=user_decks %}
+      </div>
+
     </div>
   </div>
-
 {% endblock content %}
 
 {% block scripts %}
