--- a/devshub_project/users/templates/users/user_decks.html
+++ b/devshub_project/users/templates/users/user_decks.html
@@ -6,8 +6,8 @@
 {% endblock title %}
 
 {% block content %}
-  <div class="py-8">
-    <div class="container mx-auto px-4">
+  <div class="flex flex-col flex-1 py-8">
+    <div class="container mx-auto px-4 flex flex-col flex-1">
 
       <div class="mb-8">
         {% if is_owner %}
@@ -17,15 +17,15 @@
         {% endif %}
       </div>
 
-      <div class="max-w-1/2 mx-auto mb-8">
+      <div class="max-w-1/2 w-full mx-auto mb-8">
         {% include "includes/search_form.html" with placeholder="Циклы в Python" %}
       </div>
 
-      <div class="mb-4">
+      <div class="mb-auto">
         {% include "includes/deck_list.html" with decks=user_decks user=request.user is_owner=is_owner studying_decks_ids=studying_decks_ids %}
       </div>
 
-      <div>
+      <div class="pt-8">
         {% include "includes/pagination.html" with page_obj=user_decks %}
       </div>
 
