--- a/devshub_project/projects/templates/projects/project_list.html
+++ b/devshub_project/projects/templates/projects/project_list.html
@@ -3,22 +3,22 @@
 {% block title %}Список проектов{% endblock title %}
 
 {% block content %}
-  <div class="py-8">
-    <div class="container mx-auto px-4">
+  <div class="flex flex-col flex-1 py-8">
+    <div class="container mx-auto px-4 flex flex-col flex-1">
 
       <div class="mb-8">
         {% include "includes/title.html" with title="Проекты" %}
       </div>
 
-      <div class="max-w-1/2 mx-auto mb-8">
+      <div class="max-w-1/2 w-full mx-auto mb-8">
         {% include "includes/search_form.html" with placeholder="Сервис сокращения ссылок на FastAPI" %}
       </div>
 
-      <div class="mb-4">
+      <div class="mb-auto">
         {% include "includes/project_list.html" with projects=projects user=request.user %}
       </div>
 
-      <div>
+      <div class="pt-8">
         {% include "includes/pagination.html" with page_obj=projects %}
       </div>
 
