--- a/devshub_project/templates/base.html
+++ b/devshub_project/templates/base.html
@@ -1,6 +1,6 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-full">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +10,7 @@
 <body class="flex flex-col min-h-screen">
   {% include "header.html" %}
 
-  <main class="flex-1">
+  <main class="flex-1 flex flex-col">
     {% block content %}
     {% endblock content %}
   </main>
