style(users): add markup and styles for user_list template
- added user.html component
- added render_user inclusion tag
- added user_list.html template in includes/
- remove truncatecards filter from img tag in project.html component

--- a/devshub_project/projects/templates/components/project.html
+++ b/devshub_project/projects/templates/components/project.html
@@ -8,7 +8,7 @@
         <a href="{{ project.get_absolute_url }}">
           <img
             src="{{ im.url }}"
-            alt="Обложка {{ project.title }}|truncatechars:40"
+            alt="Обложка {{ project.title }}"
             class="w-full h-full rounded-lg object-cover object-center duration-500 transition-transform hover:scale-110"
           >
         </a>
@@ -50,11 +50,4 @@
     </a>
   </div>
 
-  <div class="text-right flex-1">
-    {% if is_author %}
-      <span>Вы автор</span>
-    {% else %}
-      <span>Новый</span>
-    {% endif %}
-  </div>
 </div>
