--- a/devshub_project/users/templates/users/user_list.html
+++ b/devshub_project/users/templates/users/user_list.html
@@ -4,47 +4,26 @@
 
 {% block content %}
 
-  <h1>Список пользователей</h1>
+  <div class="flex flex-col flex-1 py-8">
+    <div class="container mx-auto px-4 flex flex-col flex-1">
 
-  <div>
-    <form method="get">
-      <input type="text" name="query" placeholder="Имя пользователя, направление или навык" value={{ request.GET.query|default:'' }}>
-      <select name="sort_by">
-        <option value="username_asc" {% if request.GET.sort_by == 'username_asc' %}selected{% endif %}>По имени (А-Я)</option>
-        <option value="username_desc" {% if request.GET.sort_by == 'username_desc' %}selected{% endif %}>По имени (Я-А)</option>
-      </select>
-      <button type="submit">Поиск</button>
-    </form>
+      <div class="mb-8">
+        {% include "includes/title.html" with title="Пользователи" %}
+      </div>
+
+      <div class="max-w-1/2 w-full mx-auto mb-8">
+        {% include "includes/search_form.html" with placeholder="Имя пользователя, направление или навык" %}
+      </div>
+
+      <div>
+        {% include "includes/user_list.html" with users=users %}
+      </div>
+
+      <div class="pt-8">
+        {% include "includes/pagination.html" with page_obj=users %}
+      </div>
+
+    </div>
   </div>
-
-  <ul>
-    {% for user in users %}
-      <li>
-        <h4>
-          <a href="{{ user.get_absolute_url }}">
-            {{ user.username }}
-          </a>
-        </h4>
-      </li>
-    {% empty %}
-      <li>
-        Пользователей нету
-      </li>
-    {% endfor %}
-  </ul>
-
-<div>
-  {% if users.has_previous %}
-    <a href="?page={{ users.previous_page_number }}&query={{ query }}&sort_by={{ sort_by }}">Назад</a>
-  {% endif %}
-
-  <span>
-    Страница {{ users.number }} из {{ users.paginator.num_pages }}
-  </span>
-
-  {% if users.has_next %}
-    <a href="?page={{ users.next_page_number }}&query={{ query }}&sort_by={{ sort_by }}">Вперёд</a>
-  {% endif %}
-</div>
 
 {% endblock content %}
