--- a/devshub_project/cards/templates/cards/card_confirm_delete.html
+++ b/devshub_project/cards/templates/cards/card_confirm_delete.html
@@ -3,13 +3,17 @@
 {% block title %}Удалить {{ card.question }}{% endblock title %}
 
 {% block content %}
+  <div class="flex flex-col flex-1 py-28">
+    <div class="container mx-auto px-4 flex flex-col">
 
-  <h1>Уверены что хотите удалить карточку "{{ card.question }}"?</h1>
+      <div class="mb-8">
+        {% include "includes/title.html" with card=card %}
+      </div>
 
-  <form method="post">
-    {% csrf_token %}
-    <button type="submit">Да</button>
-    <a href="{{ card.get_absolute_url }}">Нет</a>
-  </form>
+      <div>
+        {% include "includes/confirm_delete_form.html" with obj=card %}
+      </div>
 
+    </div>
+  </div>
 {% endblock content %}
