--- a/devshub_project/decks/templates/decks/deck_confirm_delete.html
+++ b/devshub_project/decks/templates/decks/deck_confirm_delete.html
@@ -4,12 +4,18 @@
 
 {% block content %}
 
-  <h1>Уверены что хотите удалить набор карточек "{{ deck.title }}"?</h1>
+  <div class="flex flex-col flex-1 py-28">
+    <div class="container mx-auto px-4 flex flex-col">
 
-  <form method="post">
-    {% csrf_token %}
-    <button type="submit">Да</button>
-    <a href="{{ deck.get_absolute_url }}">Нет</a>
-  </form>
+      <div class="mb-8">
+        {% include "includes/title.html" with deck=deck %}
+      </div>
+
+      <div>
+        {% include "includes/confirm_delete_form.html" with obj=deck %}
+      </div>
+
+    </div>
+  </div>
 
 {% endblock content %}
