--- a/devshub_project/static/src/input.css
+++ b/devshub_project/static/src/input.css
@@ -1,2 +1,12 @@
 @import "tailwindcss";
 @plugin "@tailwindcss/forms";
+
+@layer components {
+  label.required::after {
+    content: " *";
+    color: #ef4444;
+  }
+  .errorlist {
+    color: #ce3c3c;
+  }
+}
