refactor: update Cards, Decks, Projects fields and change __str__ methods
- Changed Card __str__ method for displaying author
- Changed Deck cards field, cant be blank now
- Project user field renamed to author, description cant be blank now
- ProjectImage image field renamed to file
- Renamed User primary_skill to skill, removed old indexes, added index on updated_at field
- Renamed all related variables for User, Project and ProjectImage in services, views, forms, templates
- Recreated migrations

--- a/devshub_project/decks/templates/components/deck.html
+++ b/devshub_project/decks/templates/components/deck.html
@@ -8,7 +8,7 @@
 
   <div class="flex-1">
     <a href="{{ deck.author.get_absolute_url }}" class="hover:text-blue-600 transition-colors">
-      {{ deck.author }}
+      {{ deck.author.username }}
     </a>
   </div>
 
