--- a/devshub_project/projects/templates/components/project.html
+++ b/devshub_project/projects/templates/components/project.html
@@ -45,8 +45,8 @@
   </div>
 
   <div class="flex-1">
-    <a href="{{ project.user.get_absolute_url }}" class="hover:text-blue-600 transition-colors">
-      {{ project.user }}
+    <a href="{{ project.author.get_absolute_url }}" class="hover:text-blue-600 transition-colors">
+      {{ project.author.username }}
     </a>
   </div>
 
