--- a/devshub_project/users/templates/components/user.html
+++ b/devshub_project/users/templates/components/user.html
@@ -34,8 +34,8 @@
   </div>
 
   <div class="flex-1">
-    {% if user.primary_skill %}
-      <span>{{ user.primary_skill }}</span>
+    {% if user.skills %}
+      <span>{{ user.skills }}</span>
     {% else %}
       <span>Не указаны</span>
     {% endif %}
