--- a/devshub_project/templates/header.html
+++ b/devshub_project/templates/header.html
@@ -12,7 +12,7 @@
       {% if request.user.is_authenticated %}
         <ul class="flex gap-x-5 relative">
           <li class="relative group cursor-pointer">
-              {{ request.user }}
+              {{ request.user.username }}
             <ul class="absolute border border-gray-300 rounded-md left-0 mt-2 w-48 bg-white  shadow-lg opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all duration-200">
               <li>
                 <a href="{% url "user_detail" request.user.pk %}" class="block px-4 py-2 hover:bg-gray-100">
